removed an unneeded comma

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <picture>
     <source srcset="images/museum-800_x_800.jpg,
                     images/museum-1600_x_1600.jpg 2x,
-                    images/museum-2400_x_2400.jpg 3x,"
+                    images/museum-2400_x_2400.jpg 3x"
                     media="(min-width: 1600px)">
 
     <source srcset="images/museum-640_x_640.jpg,
